--- a/Start/StarshipTraveler.UI.Client/StarshipTraveler.UI.Client.csproj
+++ b/Start/StarshipTraveler.UI.Client/StarshipTraveler.UI.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,11 +13,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.9.0-preview3-19154-02" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.9.0-preview3-19154-02" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
-    <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
   </ItemGroup>
 
 </Project>
