--- a/Start/StarshipTraveler.Api/Properties/launchSettings.json
+++ b/Start/StarshipTraveler.Api/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63656/",
+      "applicationUrl": "http://localhost:63655/",
       "sslPort": 0
     }
   },
@@ -15,13 +15,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "StarshipTraveler.UI.Client": {
+    "StarshipTraveler.UI.Server": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:63660/"
+      "applicationUrl": "http://localhost:5000/"
     }
   }
 }
