--- a/StartshipTraveler.ServerSide/StartshipTraveler.ServerSide.csproj
+++ b/StartshipTraveler.ServerSide/StartshipTraveler.ServerSide.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
-    <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
+        <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
+    </ItemGroup>
 
 </Project>
