--- a/StarshipTraveler.Client/StarshipTraveler.Client.csproj
+++ b/StarshipTraveler.Client/StarshipTraveler.Client.csproj
@@ -8,17 +8,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.0.0-preview9.19465.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0.0-preview9.19465.2" PrivateAssets="all" />
-        <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.0.0-preview9.19465.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.0.0-preview9.19465.2" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.1.0-preview1.19508.20" />
+        <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.1.0-preview1.19508.20" PrivateAssets="all" />
+        <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview1.19508.20" />
+        <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.1.0-preview1.19508.20" PrivateAssets="all" />
         <PackageReference Include="System.Text.Json" Version="4.6.0-preview8.19405.3" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
         <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
-          <PackageReference Include="System.Text.Json" Version="4.6.0" />
+          <PackageReference Include="System.Text.Json" Version="4.7.0-preview1.19504.10" />
 </ItemGroup>
 
 </Project>
