--- a/Start/StartshipTraveler.ServerSide/StartshipTraveler.ServerSide.csproj
+++ b/Start/StartshipTraveler.ServerSide/StartshipTraveler.ServerSide.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
+      <Folder Include="Data\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
     </ItemGroup>
 
 </Project>
