--- a/StarshipTraveler.Model/StarshipTraveler.Model.csproj
+++ b/StarshipTraveler.Model/StarshipTraveler.Model.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
         <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0-preview1.19504.10" />
+        <PackageReference Include="System.Text.Json" Version="4.7.0-preview1.19504.10" />
     </ItemGroup>
 
 
