--- a/StarshipTraveler.Client/StarshipTraveler.Client.csproj
+++ b/StarshipTraveler.Client/StarshipTraveler.Client.csproj
@@ -1,22 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <OutputType>Exe</OutputType>
-    <LangVersion>preview</LangVersion>
-    <RazorLangVersion>3.0</RazorLangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifier>browser-wasm</RuntimeIdentifier>
+		<UseBlazorWebAssembly>true</UseBlazorWebAssembly>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="3.1.0-preview3.19555.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.1.0-preview3.19555.2" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.1.0-preview3.19555.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.1.0-preview3.19555.2" PrivateAssets="all" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-preview.8.20414.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-preview.8.20414.8" PrivateAssets="all" />
+		<PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.8.20407.11" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
-    <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
+		<ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
+	</ItemGroup>
 
 </Project>
