--- a/StarshipTraveler.Model/StarshipTraveler.Model.csproj
+++ b/StarshipTraveler.Model/StarshipTraveler.Model.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<LangVersion>preview</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
-        <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0-preview3.19551.4" />
-        <PackageReference Include="System.Text.Json" Version="4.7.0-preview3.19551.4" />
-    </ItemGroup>
-
+	<ItemGroup>
+	  <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+	  <PackageReference Include="System.Text.Json" Version="4.7.2" />
+	</ItemGroup>
 
 </Project>
