--- a/StarshipTraveler.Components/StarshipTraveler.Components.csproj
+++ b/StarshipTraveler.Components/StarshipTraveler.Components.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<RazorLangVersion>3.0</RazorLangVersion>
+		<TargetFramework>net5.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
-
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.2" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-rc.2.20475.17" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-rc.2.20475.17" />
 	</ItemGroup>
 
 
