--- a/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
+++ b/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
@@ -1,16 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<LangVersion>preview</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
-    <ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
+		<ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="wwwroot\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="wwwroot\" />
+	</ItemGroup>
 
 </Project>
