--- a/StarshipTraveler.Model/StarshipTraveler.Model.csproj
+++ b/StarshipTraveler.Model/StarshipTraveler.Model.csproj
@@ -8,8 +8,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
-	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0-rc.2.20475.5" />
-	  <PackageReference Include="System.Text.Json" Version="5.0.0-rc.2.20475.5" />
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+	  <PackageReference Include="System.Text.Json" Version="5.0.1" />
 	</ItemGroup>
 
 </Project>
