--- a/Start/StarshipTraveler.ServerSide/Properties/launchSettings.json
+++ b/Start/StarshipTraveler.ServerSide/Properties/launchSettings.json
@@ -3,17 +3,18 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:63655/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:50361",
+      "sslPort": 44304
     }
   },
   "profiles": {
-    "StarshipTraveler.UI.Server": {
+    "StarshipTraveler.ServerSide": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:5000/"
+      "applicationUrl": "https://localhost:5005;http://localhost:5004"
     }
   }
 }
