--- a/Start/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
+++ b/Start/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
@@ -7,18 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.3" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.3" PrivateAssets="all" />
-		<PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
 		<ProjectReference Include="..\StarshipTraveler.Model\StarshipTraveler.Model.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Data\" />
+		<Folder Include="Data\" />
+		<Folder Include="wwwroot\" />
 	</ItemGroup>
 
 </Project>
