--- a/StarshipTraveler.Api/Properties/launchSettings.json
+++ b/StarshipTraveler.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "StarshipTraveler.UI.Server": {
+    "StarshipTraveler.Api": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
