--- a/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
+++ b/StarshipTraveler.ServerSide/StarshipTraveler.ServerSide.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
-	</PropertyGroup>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\StarshipTraveler.Components\StarshipTraveler.Components.csproj" />
