Remove Azure webhook (app currently not deployed)

--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -33,9 +33,9 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-      - 
-        name: Deploy Stage
-        uses: fjogeleit/http-request-action@master
-        with:
-          url: ${{ secrets.SERVER_AZURE_WEBHOOK }}
-          method: 'POST'
+      # - 
+      #   name: Deploy Stage
+      #   uses: fjogeleit/http-request-action@master
+      #   with:
+      #     url: ${{ secrets.SERVER_AZURE_WEBHOOK }}
+      #     method: 'POST'
