--- a/StarshipTraveler.Components/StarshipTraveler.Components.csproj
+++ b/StarshipTraveler.Components/StarshipTraveler.Components.csproj
@@ -8,9 +8,9 @@
     </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.0-preview.5.22303.8" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0-preview.5.22303.8" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0-preview.5.22301.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="7.0.0-rc.1.22427.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.0-rc.1.22427.2" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0-rc.1.22426.10" />
 	</ItemGroup>
 
 
