--- a/StarshipTraveler.Model/StarshipTraveler.Model.csproj
+++ b/StarshipTraveler.Model/StarshipTraveler.Model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
         <TargetFramework>net7.0</TargetFramework>
@@ -9,8 +9,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
-	  <PackageReference Include="System.ComponentModel.Annotations" Version="6.0.0-preview.4.21253.7" />
-	  <PackageReference Include="System.Text.Json" Version="7.0.0-rc.1.22426.10" />
+	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+	  <PackageReference Include="System.Text.Json" Version="7.0.3" />
 	</ItemGroup>
 
 </Project>
