--- a/Start/StarshipTraveler.Model/StarshipTraveler.Model.csproj
+++ b/Start/StarshipTraveler.Model/StarshipTraveler.Model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
@@ -9,7 +9,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Dijkstra.NET" Version="1.2.1" />
 	  <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-	  <PackageReference Include="System.Text.Json" Version="5.0.1" />
+	  <PackageReference Include="System.Text.Json" Version="7.0.3" />
 	</ItemGroup>
 
 </Project>
